@@ -1,4 +1,8 @@
 2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/Makefile.am (STANDARD_COMMON_STUFF_NOT_FILE): Add sl.
+	* common-src/statfs.c: Fix scale function.
+
+2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/sendsize.c: Fix PARAM_HONOR_NODUMP.
 
 2007-02-09  Jean-Louis Martineau <martineau@zmanda.com>
